fix(inline-toolbar): scroll button outside the scrollable container; padding/margin overflow trick

--- a/packages/editor/src/Styles/inline-toolbar.scss
+++ b/packages/editor/src/Styles/inline-toolbar.scss
@@ -1,8 +1,6 @@
 @import '../../../common/src/Styles/palette';
 @import '../../../common/src/Styles/mixins';
-
 $borderRadius: 6px;
-
 .inlineToolbar {
   min-height: 50px;
   left: 50%;
@@ -21,67 +19,78 @@ $borderRadius: 6px;
 .inlineToolbar_buttons {
   display: flex;
   height: 48px;
+}
 
+.inlineToolbar_overrideContent {
+  height: auto;
+  padding: 0;
+}
+
+.inlineToolbar_responsiveSpacer {
+  display: none;
+  flex: 0 0 24px;
+}
+
+.inlineToolbar_responsiveArrow {
+  display: none;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 40px;
+  line-height: 48px;
+  text-align: center;
+  background: transparent;
+  font-size: 12px;
+  cursor: pointer;
+  z-index: 9999;
+  border: none;
+  >i {
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border: 1px solid $toolbar-font-color;
+    border-width: 0 0 1px 1px;
+  }
+}
+
+.inlineToolbar_responsiveArrowLeft {
+  right: 0;
+  border-left: 1px solid $toolbar-border-color;
+  border-radius: 0 $borderRadius $borderRadius 0;
+  >i {
+    margin-right: 3px;
+    transform: rotate(45deg);
+  }
+}
+
+.inlineToolbar_responsiveArrowRight {
+  right: 0;
+  border-left: 1px solid $toolbar-border-color;
+  border-radius: 0 $borderRadius $borderRadius 0;
+  >i {
+    margin-right: 3px;
+    transform: rotate(225deg);
+  }
+}
+
+.inlineToolbar_scrollableContainer {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  padding: 80px 0;
+  margin: -80px 0;
+  pointer-events: none;
+  & > * {
+      pointer-events: initial;
+  }
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: auto;
   &::-webkit-scrollbar {
     display: none;
     width: 0 !important;
   }
-
-  &.inlineToolbar_overrideContent {
-    height: auto;
-    padding: 0;
-  }
-
-  .inlineToolbar_responsiveSpacer {
-    display: none;
-    flex: 0 0 24px;
-  }
-
-  .inlineToolbar_responsiveArrow {
-    display: none;
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 40px;
-    line-height: 48px;
-    text-align: center;
-    background: white;
-    font-size: 12px;
-    cursor: pointer;
-    z-index: 9999;
-    border: none;
-
-    > i {
-      display: inline-block;
-      width: 6px;
-      height: 6px;
-      border: 1px solid $toolbar-font-color;
-      border-width: 0 0 1px 1px;
-    }
-  }
-
-  .inlineToolbar_responsiveArrowLeft {
-    right: 0;
-    border-left: 1px solid $toolbar-border-color;
-    border-radius: 0 $borderRadius $borderRadius 0;
-
-    > i {
-      margin-right: 3px;
-      transform: rotate(45deg);
-    }
-  }
-
-  .inlineToolbar_responsiveArrowRight {
-    right: 0;
-    border-left: 1px solid $toolbar-border-color;
-    border-radius: 0 $borderRadius $borderRadius 0;
-
-    > i {
-      margin-right: 3px;
-      transform: rotate(225deg);
-    }
-  }
-
 }
 
 .inlineToolbar_extend {
@@ -93,14 +102,9 @@ $borderRadius: 6px;
     display: flex;
     width: auto;
     max-width: 100%;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: auto;
-
     .inlineToolbar_responsiveSpacer {
       display: block;
     }
-
     .inlineToolbar_responsiveArrow {
       display: block;
     }
